<resources>
    <string name="app_name">Dandelion</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_input_account">请输入手机/邮箱/姓名</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="please_input_birthday">请输入生日</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_school">请输入大学名称</string>
    <string name="please_input_college">请输入所在学院名称</string>
    <string name="please_input_class">请输入所在班级</string>
    <string name="please_input_student_id">请输入学号</string>
    <string name="login">登陆</string>
    <string name="go_to_register">前往注册></string>
    <string name="welcome">欢迎使用Dandelion</string>
    <string name="welcome_register">欢迎\n成为Dandelion一员</string>
    <string name="empty_error_text">不可为空</string>
    <string name="un_same_error_text">两次密码不一致</string>

    <string name="please_select_sex">请选择性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>

    <string name="friend">朋友</string>
    <string name="message">消息</string>
    <string name="data">资料</string>
    <string name="mine">我的</string>

    <string name="register">注册</string>

    <string name="birthday">%1$d年%2$d月%3$d日</string>
</resources>
