<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".register.ui.RegisterFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#000000"
            android:text="@string/welcome_register"
            android:layout_marginTop="30dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_til_email"
            android:layout_width="match_parent"
            android:labelFor="@id/register_aet_email"
            android:theme="@style/text_lab"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_aet_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/please_input_email"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_til_password"
            android:layout_width="match_parent"
            android:labelFor="@id/register_aet_password"
            android:theme="@style/text_lab"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_aet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/please_input_password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_til_re_password"
            android:layout_width="match_parent"
            android:labelFor="@id/register_aet_re_password"
            android:theme="@style/text_lab"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_aet_re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/please_input_password_again"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_til_birthday"
            android:layout_width="match_parent"
            android:labelFor="@id/register_aet_birthday"
            android:theme="@style/text_lab"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_aet_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/please_input_birthday"/>
    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
            android:id="@+id/rg_sex"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/please_select_sex"/>
        <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:text="@string/male"
                android:layout_height="wrap_content"/>
        <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginStart="50dp"/>
    </RadioGroup>
    <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:paddingBottom="5dp"
            android:paddingRight="100dp"
            android:paddingLeft="100dp"
            android:paddingTop="5dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bt_login_background"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"/>
</LinearLayout>