<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
              tools:context=".login.ui.LoginFragment">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_marginBottom="30dp"
            android:text="@string/welcome"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_account"
            android:layout_width="match_parent"
            android:labelFor="@id/aet_account"
            android:theme="@style/text_lab"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aet_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/please_input_account"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:labelFor="@id/aet_password"
            android:theme="@style/text_lab"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/please_input_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#1E90FF"
            android:gravity="end"
            android:text="@string/go_to_register"/>
    <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:paddingBottom="5dp"
            android:paddingRight="100dp"
            android:paddingLeft="100dp"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_login_background"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"/>

</LinearLayout>